--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   text-align: center;
   font-family: var(--main-font);
   color: black;
@@ -42,7 +43,13 @@ p {
   line-height: 1.5;
   text-align: left;
 }
-
+.hero-image {
+  background-color: #dadada;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 .navigation-links {
   display: flex;
   margin-top: 40px;
@@ -116,11 +123,20 @@ p {
   padding: 40px;
   max-width: 100%;
 }
+.project-link {
+  margin-bottom: 20px;
+}
+.col-md-6 {
+  padding-bottom: 20px;
+}
 #weatherapp {
   font-family: var(--main-font);
 }
 #navbar {
   color: #be7d7c;
+}
+#myproject {
+  padding-top: 40px;
 }
 @media (max-width: 576px) {
   h1 {
@@ -140,11 +156,6 @@ p {
   h3 {
     color: white;
   }
-
-  #home-page-image {
-    display: none;
-  }
-
   #contact {
     font-size: 32px;
     text-align: center;
@@ -199,7 +210,7 @@ button {
 }
 .card {
   max-width: 95%;
-  margin: 50px auto 30px auto;
+  margin: 30px auto 40px auto;
   border-radius: 8px;
   background-color: rgba(24, 25, 33, 0.2);
   backdrop-filter: blur(1.5rem);
